# CrystalQuest

./: .gitignore  Dockerfile  README.md  docker-compose.yml  launchds.sh
.github/workflows/: ghcr.yml
backend/: CrystalQuestDatabase.db  main.py  main2.py  pyproject.toml
backend/database/: database.py
backend/database/schema/: tables.sql
backend/models/: balance.py  transaction.py  transaction_item.py  transaction_item_tier.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/public/: manifest.json
frontend/src/: App.css  App.tsx  apiActions.ts  apiEndpointBuilder.ts  index.css  main.tsx
frontend/src/components/: add_item_dialog.tsx  balance.tsx  dropdown_button.tsx  transaction_item_list.tsx  transaction_list.tsx
frontend/src/models/: balance.interface.ts  index.ts  transaction.interface.ts  transaction_item.interface.ts  transaction_item_tier.interface.ts
