[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["thearyadev <personal@aryankothari.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.0"
beartype = "^0.15.0"
uvicorn = "^0.23.2"
black = "^23.7.0"
rich = "^13.5.2"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
